# OpenPathCL

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  input_map.html  main_parallel.c  main_serial.c
runtime_measurements/: README.md
runtime_measurements/Request 1/: OpenPathCL_Dijkstra_Request_1.html  OpenPathCL_Parallel_Request_1.html  OpenPathCL_Parallelizable_Request_1.html  OpenPathCL_Δ-Stepping_Request_1.html
runtime_measurements/Request 2/: OpenPathCL_Dijkstra_Request_2.html  OpenPathCL_Parallel_Request_2.html  OpenPathCL_Parallelizable_Request_2.html  OpenPathCL_Δ-Stepping_Request_2.html
runtime_measurements/Request 3/: OpenPathCL_Dijkstra_Request_3.html  OpenPathCL_Parallel_Request_3.html  OpenPathCL_Parallelizable_Request_3.html  OpenPathCL_Δ-Stepping_Request_3.html
runtime_measurements/Request 4/: OpenPathCL_Dijkstra_Request_4.html  OpenPathCL_Parallel_Request_4.html  OpenPathCL_Parallelizable_Request_4.html  OpenPathCL_Δ-Stepping_Request_4.html
runtime_measurements/Request 5/: OpenPathCL_Dijkstra_Request_5.html  OpenPathCL_Parallel_Request_5.html  OpenPathCL_Parallelizable_Request_5.html  OpenPathCL_Δ-Stepping_Request_5.html
src/: bucket_utils.c  bucket_utils.h  check_opencl.c  cli_utils.c  cli_utils.h  common.c  common.h  data_loader.c  data_loader.h  embed_images.sh  graph_utils.c  graph_utils.h  haversine.c  haversine.h  main_parallel.c  main_parallelizable.c  main_serial.c  main_serial_delta.c  main_serial_dijkstra.c  main_webserver.c  parallel_utils.c  parallel_utils.h
src/templates/: input_map.html  output_map.html
